fixed text overflow on project body & changed rounded buttons

--- a/src/Components/Body/Work/Work.scss
+++ b/src/Components/Body/Work/Work.scss
@@ -23,14 +23,13 @@
       padding: 10px;
       width: 40%;
       border-radius: 3px;
-
-      .project-img {
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        border-radius: 3px;
-        height: 200px;
+      .wrapper-img{
+        .project-img {
+          border-radius: 3px;
+          width: 100%;
+        }
       }
+
 
       .project-body {
         display: flex;
@@ -39,6 +38,7 @@
         flex-grow: 1;
         cursor: default;
         padding: 10px 20px;
+        width: calc(50% - 60px);
         .project-description {
           //paragraph fill remaining space --not currently used
           //flex: 1 0 auto;
@@ -71,7 +71,7 @@
           align-items: center;
 
           .project-button {
-            border-radius: 25px;
+            border-radius: 3px;
             padding: 10px 15px;
             margin-right: 30px;
             color: $light-grey;
@@ -121,6 +121,7 @@
       @media screen and (max-width: $tablet-max) {
         flex-direction: column;
         .project-body {
+          width: 100%;
           .project-description {
             margin: 20px 0;
           }
@@ -157,7 +158,6 @@
     #container-projects {
       .project-card {
         width: 50%;
-
         .project-body {
           width: 100%;
         }
